alignment as been fixed

--- a/src/app/module/service/components/prize-list/prize-list.component.css
+++ b/src/app/module/service/components/prize-list/prize-list.component.css
@@ -87,6 +87,7 @@ body {
   flex-wrap: wrap;
   /* Allows cards to wrap to the next line */
   gap: 20px;
+  justify-content: center;
   /* Adjust the gap between cards */
 }
 
